--- a/01-html/p1.html
+++ b/01-html/p1.html
@@ -24,33 +24,25 @@
   <h1>자기소개서</h1>
   <!-- 그냥 바로 글귀를 써도 큰 문제가 생기지는 않습니다. -->
   <!-- 하지만 이왕 하는거 문단으로 구분을 해주면 더 좋겠죠? -->
-  <p>안녕하세요, 강사 박지호입니다.</p>
+  <p>안녕하세요, 허대욱입니다.</p>
   <p>문단임을 구분을 해주면 브라우저도 어떻게 표현하는게 좋을지를 판단하기 좋아요</p>
   <!-- 학력 -->
   <h2>학력</h2>
   <ol>
-    <li>청운중학교</li>
-    <li>경복고등학교</li>
-    <li>중앙대학교</li>
+    <li>와플대학</li>
   </ol>
   <!-- 기술 스택 -->
   <h2>기술 스택</h2>
   <ul>
-    <li>Git</li>
     <li>Java</li>
-    <li>HTML</li>
-    <li>SQL</li>
-    <li>Spring Boot</li>
-    <li>Github Actions</li>
-    <li>aws</li>
+    <li>JavaScript</li>
+    <li>React</li>
   </ul>
   <!-- 사이트 -->
   <h3>자주 가는 사이트</h3>
   <ul>
-    <li><a href="https://github.com/edujeeho0">Github</a></li>
     <li><a href="https://naver.com">네이버</a></li>
     <li><a href="https://www.acmicpc.net/">Baekjoon Online Judge</a></li>
-    <li><a href="https://solved.ac/profile/edujeeho">solved.ac</a></li>
   </ul>
 </body>
 </html>
